Rework total das redes neurais.
[Resumo]
Agora a API é mais próxima as comerciais, e a implementação em si segue o especificado na bibliografia /1/.

[Mudanças na API]:
O sistema agora atua é vários níveis de abstração facilitando a implementação de outros tipos de rede neural usando a de backpropagation como base. Para isso foram introduzidas novas classes, são elas:
-Neuron
-Synapse (ligação entre um neuron e outro)
-Layer (conjunto de neuros)

Classes derivadas dessas (principalmente Layer), podem ser criadas para atribuir novas caracteristicas a rede.

*Também foram introduzidas duas estruturas para facilitar a criação de arquivos contendo os dados de treino e os resultados, são elas:
-TrainConfiguration
-TrainResult

[Casos de teste]:
Todos os casos de teste foram atualizados para a nova arquitetura, e apesar dos resultados não serer perfeitamente iguais, as variações observadas eram esperadas devido a mudança no algoritmo.

[Proximas etapas]:
-Organizar a estrutura de diretórios;
-Concluir o sistema de configuração e reporte de resultados;
-Individualizar o sistema de treinamento, para evitar uso desnecessário de memória;
-Implementar outro tipo de rede neural (Convolutional Neural Network -> reconhecimento de imagem).

[Legenda]:
*Trabalho em progresso
/1/ Michael Nielsen  - http://neuralnetworksanddeeplearning.com/

--- a/NeuralNetwork/NeuralNetwork.csproj
+++ b/NeuralNetwork/NeuralNetwork.csproj
@@ -55,18 +55,27 @@
     <Compile Include="Activation\SinusoidActivation.cs" />
     <Compile Include="Activation\SoftmaxActivation.cs" />
     <Compile Include="Activation\SoftSignActivation.cs" />
-    <Compile Include="Nets\BackpropNeuralNet.cs" />
-    <Compile Include="Nets\Convolutional\ConvolutionalNeuralNet.cs" />
+    <Compile Include="Nets\BackpropagationNet.cs" />
+    <Compile Include="Nets\Layer.cs" />
+    <Compile Include="Nets\Neuron.cs" />
+    <Compile Include="Nets\RandomUtils.cs" />
+    <Compile Include="Nets\Synapse.cs" />
+    <Compile Include="Nets\TrainConfiguration.cs" />
+    <Compile Include="Nets\TrainResult.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\BirdRecon.cs" />
     <Compile Include="Tests\Count.cs" />
     <Compile Include="Tests\IrisFlower.cs" />
+    <Compile Include="Tests\TestReportUtil.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Nets\Convolutional\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
